# API_gateway

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  config.json
backend/: backend_worker.h  order_server.cpp  user_server.cpp
bench_results/: summary_20260712_182330.csv  summary_20260712_182645.csv  summary_20260712_183544.csv  summary_20260720_212023.csv  summary_20260720_212829.csv  summary_20260721_004620.csv  summary_20260721_020641.csv  summary_20260721_023318.csv  summary_20260721_024801.csv  summary_20260721_025044.csv  summary_20260721_030042.csv  summary_20260721_030630.csv  summary_20260721_032123.csv  summary_20260721_035102.csv
include/gateway/: config.h  filter.h  filter_logging.h  filter_request_id.h  gateway.h  http_response.h  thread_pool.h
include/gateway/core/: config.h  config_loader.h  gateway.h  router.h
include/gateway/filter/: filter.h  logging_filter.h  rate_limit_filter.h  request_id_filter.h
include/gateway/http/: parser.h  request.h
include/gateway/logger/: async_logger.h  logger.h
include/gateway/monitor/: stats.h
include/gateway/net/: buffer.h  connection.h  event_loop.h  socket.h  tcp_server.h
include/gateway/proxy/: backend.h  backend_pool.h  circuit_breaker.h  health_checker.h  load_balancer.h  proxy.h
include/gateway/timer/: timer.h
include/gateway/utils/: thread_pool.h  utils.h
scripts/: bench_gateway.sh  compare_bench.sh  run_test.sh  wrk_mixed.lua
src/: config.cpp  filter_logging.cpp  filter_request_id.cpp  gateway.cpp  http_request.cpp  http_response.cpp  main.cpp  thread_pool.cpp  utils.cpp
src/core/: config.cpp  config_loader.cpp  gateway.cpp  router.cpp
src/filter/: logging_filter.cpp  rate_limit_filter.cpp  request_id_filter.cpp
src/http/: parser.cpp  request.cpp  response.cpp
src/logger/: async_logger.cpp  logger.cpp
src/monitor/: stats.cpp
src/net/: buffer.cpp  connection.cpp  event_loop.cpp  socket.cpp  tcp_server.cpp
src/proxy/: backend.cpp  backend_pool.cpp  circuit_breaker.cpp  health_checker.cpp  load_balancer.cpp  proxy.cpp
src/timer/: timer.cpp
src/utils/: thread_pool.cpp  utils.cpp
